--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ footer:
       url: "https://github.com/azrielbsi"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/mass.ulee"
+      url: "https://instagram.com/mas.ulee"
 
 defaults:
   # _posts
