--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Azriel Fidzlie
+title: King's
 email: 19215261@bsi.ac.id
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: dark
+minimal_mistakes_skin: sunrise
 search: true
 
 # Build settings
@@ -58,9 +58,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Azriel Fidzlie"
+  name   : "King's"
   avatar : "/assets/images/ulee.jpg"
-  bio    : "I am an **amazing** person."
+  bio    : "Sebagai seorang pengembang teknologi yang berkomitmen untuk meretas jalan menuju masa depan yang lebih cerah, kami terus mencari solusi inovatif untuk permasalahan global. Kami percaya bahwa teknologi adalah kunci untuk mengatasi tantangan terbesar di dunia, dan saya berdedikasi untuk memimpin perubahan melalui penelitian, pengembangan, dan implementasi teknologi mutakhir."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
