--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 
 author:
   name   : "King's"
-  avatar : "/assets/images/ulee.jpg"
+  avatar : "/assets/images/horror.png"
   bio    : "Sebagai seorang pengembang teknologi yang berkomitmen untuk meretas jalan menuju masa depan yang lebih cerah, kami terus mencari solusi inovatif untuk permasalahan global. Kami percaya bahwa teknologi adalah kunci untuk mengatasi tantangan terbesar di dunia, dan saya berdedikasi untuk memimpin perubahan melalui penelitian, pengembangan, dan implementasi teknologi mutakhir."
   links:
     - label: "Website"
