--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "King's"
   avatar : "/assets/images/horror.png"
-  bio    : "Sebagai seorang pengembang teknologi yang berkomitmen untuk meretas jalan menuju masa depan yang lebih cerah, kami terus mencari solusi inovatif untuk permasalahan global. Kami percaya bahwa teknologi adalah kunci untuk mengatasi tantangan terbesar di dunia, dan saya berdedikasi untuk memimpin perubahan melalui penelitian, pengembangan, dan implementasi teknologi mutakhir."
+  bio    : "Kami pengembang teknologi yang berkomitmen meretas masa depan melalui inovasi teknologi untuk solusi tantangan global. Kami siap memimpin perubahan melalui riset, pengembangan, dan implementasi teknologi terdepan."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
