--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: sunrise
+minimal_mistakes_skin: aqua
 search: true
 
 # Build settings
@@ -59,7 +59,7 @@ plugins:
 
 author:
   name   : "King's"
-  avatar : "/assets/images/horror.png"
+  avatar : "/assets/images/king.png"
   bio    : "Kami pengembang teknologi yang berkomitmen meretas masa depan melalui inovasi teknologi untuk solusi tantangan global. Kami siap memimpin perubahan melalui riset, pengembangan, dan implementasi teknologi terdepan."
   links:
     - label: "Website"
