--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ defaults:
       read_time: true
       comments: false
       share: true
-      related: true
+      related: false
   # _pages
   - scope:
       path: "_pages"
