--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ minimal_mistakes_skin: aqua
 comments:
   provider: "disqus"
   disqus:
-    shortname: "azrielbsi.github.io"
+    shortname: "translucent504-github-io"
 search: true
 
 # Build settings
