--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ plugins:
 
 author:
   name   : "School Programs"
-  avatar : "/assets/images/king.png"
+  avatar : "/assets/images/stationery.png"
   bio    : "Kami pengembang teknologi yang berkomitmen meretas masa depan melalui inovasi teknologi untuk solusi tantangan global. Kami siap memimpin perubahan melalui riset, pengembangan, dan implementasi teknologi terdepan."
   links:
    # - label: "Website"
