--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      related: true
 
 category_archive:
   type: liquid
