--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -5,4 +5,4 @@ docs:
       - title: "Quick-Start Guide"
         url: /docs/maling/
       - title: "Structure"
-        url: /docs/maling/
+        url: /docs/maling2/
