--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,16 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _articles
+  - scope:
+      path: ""
+      type: articles
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+      related: true
 
 category_archive:
   type: liquid
