--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "Learn"
     url: /posts/
+  - title: "Articles"
+    url: /articles/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
