--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 10 # amount of posts to show
-paginate_path: /page:num/
+# paginate: 10 # amount of posts to show
+# paginate_path: /page:num/
 timezone: Asia/jakarta # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
@@ -43,6 +43,9 @@ include:
 # Collections
 collections:
   articles:
+    output: true
+    permalink: /:collection/:path/
+  posts:
     output: true
     permalink: /:collection/:path/
 # Exclude from processing.
