--- a/_config.yml
+++ b/_config.yml
@@ -33,21 +33,13 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-# paginate: 10 # amount of posts to show
-# paginate_path: /page:num/
+paginate: 10 # amount of posts to show
+paginate_path: /page:num/
 timezone: Asia/jakarta # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
 
-# Collections
-collections:
-  articles:
-    output: true
-    permalink: /:collection/:path/
-  posts:
-    output: true
-    permalink: /:collection/:path/
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
@@ -113,16 +105,6 @@ defaults:
       read_time: true
       comments: true
       share: true
-      related: true
-  # _articles
-  - scope:
-      path: ""
-      type: articles
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
       related: true
   # _pages
   - scope:
