--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: Julius-Ulee
-minimal_mistakes_skin: aqua
+minimal_mistakes_skin: default
 comments:
   provider: "disqus"
   disqus:
@@ -33,7 +33,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 10 # amount of posts to show
+paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: Asia/jakarta # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
