--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: mas.ulee
 github_username: Julius-Ulee
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dirt
 comments:
   provider: "disqus"
   disqus:
