--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,17 @@ defaults:
       comments: true
       share: true
       related: true
+  # _articles
+  - scope:
+      path: ""
+      type: articles
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _pages
   - scope:
       path: "_pages"
