--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,10 @@ timezone: Asia/jakarta # https://en.wikipedia.org/wiki/List_of_tz_database_time_
 include:
   - _pages
 
+collections:
+  articles:
+    output: true
+    permalink: /:collection/:path/
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
@@ -99,17 +103,6 @@ defaults:
   - scope:
       path: ""
       type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
-  # _articles
-  - scope:
-      path: ""
-      type: articles
     values:
       layout: single
       author_profile: true
