--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,9 @@ main:
   - title: "Home"
     url: /
   - title: "Learn"
-    url: /posts/
+    url: /learns/
+  - title: "Article"
+    url: /articles/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
