--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,7 @@ defaults:
 
 category_archive:
   type: liquid
-  path: /categories/
+  path: /categories/:name/
 tag_archive:
   type: liquid
-  path: /tags/
+  path: /tags/:name/
