--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,17 @@ defaults:
 
 category_archive:
   type: liquid
-  path: /categories/:name/
+  path: /categories/
 tag_archive:
   type: liquid
-  path: /tags/:name/
+  path: /tags/
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: archive-taxonomy
+    tag: archive-taxonomy
+  permalinks:
+    category: /categories/:name/
+    tag: /tags/:name/
