--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,8 @@
 main:
   - title: "Home"
     url: /
-  - title: "Learn"
-    url: /learns/
-  - title: "Article"
-    url: /articles/
+  - title: "Learn & Article"
+    url: /posts/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
